deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-svc
  namespace: demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cicd-demo
