deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-demo-ingress
  namespace: demo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: demo.k8s.local
    http:
      paths:
      - path: /api/*
        pathType: Prefix
        backend:
          service:
            name: cicd-demo-svc
            port:
              number: 80
